src/objects/CustomObject16__c.object
<CustomObject>
    <fields>
        <fullName>BusinessChance__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>业务机会</label>
        <referenceTo>Opportunity</referenceTo>
        <relationshipLabel>丢单详情</relationshipLabel>
        <relationshipName>BusinessChance</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>ClosedList__c</fullName>
        <label>关单说明</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Detail__c</fullName>
        <label>丢单详细描述</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Reason__c</fullName>
        <label>丢单原因</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>价格</fullName>
                </value>
                <value>
                    <fullName>品牌</fullName>
                </value>
                <value>
                    <fullName>客户关系</fullName>
                </value>
                <value>
                    <fullName>项目中断</fullName>
                </value>
                <value>
                    <fullName>策略及打包</fullName>
                </value>
                <value>
                    <fullName>其他</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Rival__c</fullName>
        <label>竞争对手</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ThrowProduct__c</fullName>
        <label>丢单产品</label>
        <length>25</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>WinningReason__c</fullName>
        <label>竞争对手中标原因</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <label>丢单详情</label>
    <nameField>
        <displayFormat>{000000}</displayFormat>
        <label>丢单详情编号</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>丢单详情</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>